# genetic-algorithms-T3

cpp-proj/: CMakeLists.txt  config.h  main.cpp
cpp-proj/src/: methods.cpp  methods.h  testRunner.cpp  testRunner.h
cpp-proj/util/: bitset.cpp  bitset.h  clause.cpp  clause.h  random.cpp  random.h  result.h
latex/: bibliography.bib  document.aux  document.bbl  document.blg  document.fdb_latexmk  document.fls  document.out  document.tex
